cmake_minimum_required(VERSION 3.4)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
project(sqlite3_tests)
set(CMAKE_CXX_STANDARD 11)
find_package(Threads)
add_executable(${PROJECT_NAME} "tests.cpp" "sqlite3/sqlite3.c")
target_include_directories(${PROJECT_NAME} PRIVATE "googletest/googletest" "googletest/googlemock" "googletest/googletest/include" "googletest/googlemock/include" "sqlite3")
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT} dl)
if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-Wl,-U,_activateOverthrower -Wl,-U,_deactivateOverthrower -Wl,-U,_pauseOverthrower -Wl,-U,_resumeOverthrower")
endif()
